Fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -152,7 +152,7 @@ main {
 
 .skillsContainer{
   display: text-align;
-  min-height: 60vh;
+  min-height: 30vh;
   
 }
 
